// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX eCtzOH"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX caKPkz"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX cDlFkk"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX eQCXmc"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb nFTrI"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX bTPXJU"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb csBpaR"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje dnuoWJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX gvsZMB"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb gFuJf"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX RQinE"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb etenIn"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX iqQOeQ"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX grpXkn"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX gAhqWg"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX idXxhK"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX hLjDCb"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX gBpaxh"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX jPALgH"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX cIsJob"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX jSXFfO"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX eLSzxF"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX TJjWm"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX jkdUSp"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX iqQOeQ"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX grpXkn"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX gAhqWg"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX idXxhK"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX hLjDCb"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX gBpaxh"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX jPALgH"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX cIsJob"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX jSXFfO"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX eLSzxF"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX TJjWm"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX jkdUSp"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX hLjDCb"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-ifAKCX hLjDCb"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    News
  </p>
</button>
`;
